# DEVinHousa-conectaNuvem

./: README.md
Modulo1/Semana1/: imagens.html  index.html
Modulo1/Semana2/: Exercicio002.rar  estilo.css  estilo1.css  layoutFlex.html  layoutFloat.html
Modulo1/Semana4/: praticaDaQuinta.rar
Modulo1/Semana4/Aula 1/: dev.js  (+6 more)
Modulo1/Semana7/: package-lock.json  package.json
Modulo2/Semana2/: dados.txt  data.txt
Modulo2/flask/novo_projeto/: pyproject.toml
Modulo2/flask/novo_projeto/tests/: test_novo_projeto.py
Modulo3/Modulo3-Flask/: .env_example  .gitignore  LICENSE  README.md  app.py  important.txt  pyproject.toml
Modulo3/Semana09/projeto-flask/: .env  .env_sample  app.py  pyproject.toml
Modulo3/Semana09/projeto-flask/src/app/: __init__.py
Modulo3/Semana09/projeto-flask/src/app/config/: __init__.py
Modulo3/Semana09/projeto-flask/src/app/controllers/: comment.py  movie.py
Modulo3/Semana09/projeto-flask/src/app/models/: comments.py  movies.py
Modulo3/Semana09/projeto-flask/src/app/routes/: __init__.py
Modulo3/Semana09/projeto-flask/src/app/swagger/: __init__.py
Modulo3/Semana09/projeto-flask/tests/: test_projeto_flask.py
Semana 4 - Exercicios/: Cliente.js  Conta.js  Endereco.js  Transacao.js
Semana 5 - Exercicios/Exercicio1/: app.js  index.html
Semana 5 - Exercicios/Exercicio10/: app.js  index.html
Semana 5 - Exercicios/Exercicio2/: app.js  index.html
Semana 5 - Exercicios/Exercicio3/: app.js  index.html
Semana 5 - Exercicios/Exercicio4/: Pessoa.js  app.js  index.html
Semana 5 - Exercicios/Exercicio5/: app.js  index.html  utils.js
(+455 files in other folders)
